tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__Clarifier-mMCFuGqxQTuuLnJgEldztA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 7687997760864744372,
  "prerequisites": [
    1781247789925276168
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The first step in the water purification process is the clarifier. Operating this machine is a simple task, you will just need to maintain a steady supply of Activated Carbon for the filters. Using this machine, you will be able to make Grade 1 Purified Water, which can speed up processing of Naquadah-Doped Boules and Wafers by 25%.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lClarifier",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1781247789925276168
  ],
  "rewards": [],
  "tasks": []
}
