tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__CompactStorage-QNsm_wc0QO2g9C6_-vj2fA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 519111247916496508,
  "prerequisites": [
    36
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you are starting to find more and more copper, you feel your wood chests are too small to hold all the stuff.\n\n[note]It's time to upgrade your wooden chests to copper chests! Higher tiers of chests can be upgraded cheaply by using upgrade items, but not all tier chests can be upgraded directly this way. You can also try the \"Wood to Copper Chest Upgrade\", but upgrading from wood to a tiered chest will not be any cheaper.[/note]\n\n[note]Upgraded chests cannot be connected into double chests.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lCompact Storage",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    36
  ],
  "rewards": [],
  "tasks": []
}
