tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__CopperBarrel-9B9CvQD0R8iLv-CBMTYZGQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 68758819462060313,
  "prerequisites": [
    9095939251194715559
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Copper barrel has 45 slots.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lCopper Barrel",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    9095939251194715559
  ],
  "rewards": [],
  "tasks": []
}
