tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__DarkSteelTooland-AAAAAAAAAAAAAAAAAAAD5g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 998,
  "prerequisites": [
    141
  ],
  "properties": {
    "auto_claim": false,
    "desc": "In order to upgrade a Dark Steel weapon or tool, you need a vibrant crystal, 10 XP levels, and your trusty anvil.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lDark Steel Tool and Weapon Basic Upgrades",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    141
  ],
  "rewards": [],
  "tasks": []
}
