tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__DarkSteelTools-AAAAAAAAAAAAAAAAAAAAjA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 140,
  "prerequisites": [
    138
  ],
  "properties": {
    "auto_claim": false,
    "desc": "There are also tools made of dark steel. Each of them can receive upgrades. Hold shift to get the tooltip which will explain what you need in order to upgrade them.\n\nThese tools can also be enchanted like vanilla tools.\n\nThe Ender will increase wither skull and ender pearl drops. It can be upgraded to teleport the player.\n\nDark shears can be empowered, and then will shear a large area, including leaves. Handy for clearing away that giant redwood! Maybe you will find other uses for it.\n\nThe axe, once empowered, can be recharged wirelessly while in farming station.\n\nThe pick? Well, it can mine cobalt I guess if you haven't gotten a tool capable of that yet. You could keep it around to use for base decorations if your normal pick is too fast, I suppose.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lDark Steel Tools",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    138
  ],
  "rewards": [],
  "tasks": []
}
