tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__DiamondBarrel-PjAewUoJTnilPpIT-Ce0tA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 5334881515063456948,
  "prerequisites": [
    102,
    9095939251194715559
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Diamond barrel has 108 slots.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lDiamond Barrel",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    102,
    9095939251194715559
  ],
  "rewards": [],
  "tasks": []
}
